tests/reference/asr-test_print1-f1f36f1.stderr
semantic error: Separator is expected to be of string type
 --> tests/errors/test_print1.py:2:25
  |
2 |     print("a", "b", sep=2)
  |                         ^ Expected string, found: integer


Note: Please report unclear or confusing messages as bugs at
https://github.com/lcompilers/lpython/issues.
